# bt-rs-solar-monitor

.github/workflows/: firmware.yml
firmware/bt-solar-monitor/: .env.development  Cargo.toml  Notes.md  justfile  justfile copy  rust-toolchain.toml
firmware/bt-solar-monitor/.cargo/: config.toml
firmware/bt-solar-monitor/app/nrf-solar-monitor/: Cargo.toml
firmware/bt-solar-monitor/app/nrf-solar-monitor/src/: main.rs
firmware/bt-solar-monitor/app/sketch/: Cargo.toml
firmware/bt-solar-monitor/cmp/bt-core/: Cargo.toml
firmware/bt-solar-monitor/cmp/bt-core/src/: at.rs  fmt.rs  lib.rs  lte.rs  time.rs
firmware/bt-solar-monitor/cmp/bt-core/src/at/: http.rs  network.rs  packet_domain.rs  serial_interface.rs  status_control.rs
firmware/bt-solar-monitor/cmp/bt-core/src/lte/: at.rs
firmware/bt-solar-monitor/cmp/bt-core/src/lte/at/: http.rs  network.rs  packet_domain.rs  serial_interface.rs  status_control.rs
firmware/bt-solar-monitor/cmp/bt-core/src/net/: cellular.rs  cloud.rs
firmware/bt-solar-monitor/cmp/bt-core/src/net/cellular/: sim_com_a67.rs
firmware/bt-solar-monitor/cmp/bt-core/src/sensor/: ve_direct.rs
firmware/bt-solar-monitor/components/bt-core/: Cargo.toml  build.rs
firmware/bt-solar-monitor/components/bt-core/proto/: readings.proto
firmware/bt-solar-monitor/components/bt-core/src/: at.rs  fmt.rs  lib.rs  net.rs  sensor.rs  solar_monitor.rs
firmware/bt-solar-monitor/components/bt-core/src/at/: status_control.rs
firmware/bt-solar-monitor/components/bt-core/src/net/: cellular.rs  cloud.rs
firmware/bt-solar-monitor/components/bt-core/src/net/cellular/: sim_com_a67.rs
firmware/bt-solar-monitor/components/bt-core/src/sensor/: ve_direct.rs
firmware/bt-solar-monitor/components/bt-core/src/solar_monitor/: cloud.rs
firmware/bt-solar-monitor/nrf/: Cargo.toml  rustfmt.toml
firmware/bt-solar-monitor/nrf/apps/nrf-solar-monitor/: Cargo.toml
firmware/bt-solar-monitor/nrf/apps/nrf-solar-monitor/src/: main.rs
firmware/bt-solar-monitor/nrf/apps/sketch/: Cargo.toml  memory.x
firmware/bt-solar-monitor/nrf/components/bt-nrf/: Cargo.toml
firmware/bt-solar-monitor/nrf/components/bt-nrf/src/: driver.rs
firmware/bt-solar-monitor/nrf/components/bt-nrf/src/driver/: qspi_flash.rs
firmware/bt-solar-monitor/nrf/hw/: nrf52840.svd
firmware/bt-solar-monitor/src/: lib.rs
firmware/bt-solar-monitor/src/net/: lte.rs
firmware/bt-solar-monitor/src/net/lte/: at.rs  at_cmds.rs
firmware/bt-solar-monitor/src/net/lte/at/: http.rs  network.rs  packet_domain.rs
queries/: Query.sql
scripts/: requests.http
web-api/solar-api/: .env.example  .gitignore  Notes.md  Rakefile  composer.json  docker-compose.yml
web-api/solar-api/.devcontainer/: devcontainer.json
web-api/solar-api/.docker/php/: Dockerfile
web-api/solar-api/.docker/php/conf.d/: xdebug.ini
web-api/solar-api/app/Casts/: ProtoAsJson.php
web-api/solar-api/app/Http/Controllers/: DashboardController.php  SolarReadingController.php
web-api/solar-api/app/Http/Middleware/: ApiToken.php  StripToMinimalHeaders.php
web-api/solar-api/app/Models/: Event.php  SolarReading.php
web-api/solar-api/app/View/Components/: OfflineEvent.php  OnlineEvent.php  StartupEvent.php  SystemEvent.php
web-api/solar-api/config/: database.php
web-api/solar-api/database/migrations/: 2025_12_06_090810_create_solar_readings_table.php  2025_12_13_101821_create_events_table.php
web-api/solar-api/public/: .htaccess  index.php
web-api/solar-api/public/css/: app.css
web-api/solar-api/resources/views/: events.blade.php  readings.blade.php
web-api/solar-api/resources/views/components/: main-layout.blade.php  offline-event.blade.php  online-event.blade.php  startup-event.blade.php  system-event.blade.php
web-api/solar-api/routes/: api.php  web.php
