[package]
name = "nrf-solar-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

heapless = { version = "0.9.1", features = ["defmt"] }

static_cell = "2.1.1"

embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

embassy-nrf = { version = "0.8.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }

bt-core = { path = "../../cmp/bt-core", features = ["defmt"] }
