[package]
name = "sketch"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

heapless = "0.8.0"

static_cell = "2.1.1"

embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"

embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0" , features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7.1" , features = ["defmt"] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"]}

embassy-rp = { version = "0.7.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }

serde = { version = "1.0.219", default-features = false, features = ["derive"] }

atat = { version = "0.24.1" , features = ["defmt"] }
atat_derive = { version = "0.24.1" }

bt-core = { path = "../../cmp/bt-core", features = ["defmt"] }


#[patch.crates-io]
# embassy-net-ppp = { path = "../embassy/embassy-net-ppp" }