[package]
name = "bt-core"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]

[dependencies]

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.27", optional = true }

heapless = { version = "0.9.1", features = ["defmt"] }

embedded-hal = { version = "1.0.0" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

nom = { version = "8.0.0", features = [], default-features = false }

[dev-dependencies]
defmt-rtt = "1.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ctor = "0.6.1"
approx = "0.5.1"
