[package]
name = "bt-core"
version = "0.1.0"
edition = "2024"

[features]
defmt = [
    "dep:defmt",
    "heapless/defmt",
    "embedded-io-async/defmt-03",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",


]
log = ["dep:log"]
std = ["embassy-sync/std", "critical-section/std", "embassy-time/std"]

[dependencies]

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.27", optional = true }

heapless = { version = "0.9.1" }

embedded-hal = { version = "1.0.0" }
embedded-io-async = { version = "0.6.1" }

embassy-sync = { version = "0.7.1" }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.5.0" }

nom = { version = "8.0.0", features = [], default-features = false }
chrono = { version = "0.4.42", default-features = false }

critical-section = { version = "1.2.0" }

[dev-dependencies]
defmt-rtt = "1.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ctor = "0.6.1"
approx = "0.5.1"
serial_test = "3.2.0"
