[package]
name = "bt-core"
version = "0.1.0"
edition = "2024"

[features]
defmt = [
    "dep:defmt",
    "heapless/defmt",
    "embedded-io-async/defmt-03",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",


]
log = ["dep:log"]

[dependencies]

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.27", optional = true }

heapless = { version = "0.9.1" }

embedded-hal = { version = "1.0.0" }
embedded-io-async = { version = "0.6.1" }

embassy-sync = { version = "0.7.1" }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.5.0" }

nom = { version = "8.0.0", features = [], default-features = false }
chrono = { version = "0.4.42", default-features = false }

micropb = { version = "0.4.1", features = [
    "container-heapless",
    "enable-64bit",
    "encode",
    "decode",
], default-features = false }


[target.'cfg(not(target_os = "none"))'.dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
embassy-time = { version = "0.5.0", features = ["std"] }

[dev-dependencies]
defmt-rtt = "1.0.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = "0.12.24"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ctor = "0.6.1"
approx = "0.5.1"
serial_test = "3.2.0"
micropb = { version = "0.4.1", features = [
    "alloc",
    "enable-64bit",
    "encode",
    "decode",
], default-features = false }


[build-dependencies]
micropb-gen = { version = "0.4.1" }
